their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the CVS log comments.  A copy of
the CVS logs is updated daily at the following URL:

  http://maptools.org/dl/mapserver_Changelog.txt


Version 4.10.0-RC1 (?)
---------------------------------

- Hiding labelitemindex, labelsizeitemindex, labelangleitemindex
  from the SWIG interface (bug 1906)

- Fixed computation of geotransform to match BBOX (to edges of image) not
  map.extent (to center of edge pixels).  (bug 1916)

- mapraster.c: Use msResampleGDALToMap() for "upside down" images. (bug 1904)


Version 4.10.0-beta3 (2006-09-06)
---------------------------------

- Web Map Context use format metadata when formatlist not available. (bug 1723)

- Web Map Context boolean values true/false now interpreted. (bug 1692)

- Added support for MULTIPOLYGON, MULTILINESTRING, and MULTIPOINT in 
  msShapeFromWKT() when going through OGR (i.e. GEOS disabled) (bug 1891)

- Fixed MapScript getExpressionString() that was failing on expressions
  longer that 256 chars (SWIG) and 512 chars (PHP). (bug 1428)

- [WMSSLD] use Title of Rule if Name not present (bug 1889)

- Fixed syntax error (for visual c++) in mapimagemap.c. 

- Fixed mapgeos.c problems with multipoint and multilinestring WKT (bug 1897).

- Implemented translation via OGR to WKT for multipoint, multiline and
  multipolygon (bug 1618)


Version 4.10.0-beta2 (2006-08-28)
---------------------------------

- Applied patch supplied by Vilson Farias for extra commas with imagemap
  output (bug 760).

- Fixed possible heap overflow with oversized POST requests (bug 1885)

- Set ./lib and ./include properly for MING support (bug 1866)

- More robust library checking on OSX (bug 1867)

- Removed mpatrol support (use valgrind instead for something 
  similar and less intrusive).  (bug 1883)

- Added mapserver compilation flags to the SWIG c# command line (bug 1881)
